# BitWigControllerCollection

./: .gitignore  .gitmodules  CLAUDE.md
.claude/skills/: bitwig-controller-api.md  bitwig-debug-deploy.md  bitwig-hardware-surface.md  bitwig-project-setup.md
Extensions/: electra-one.bwextension  faderfox-pc12-multi.bwextension  faderfox-pc12.bwextension  note-fx-scale.bwextension
electra-one/: SETUP.md  pom.xml
electra-one/preset/: bitwig-remote-controls.json
electra-one/src/main/java/com/electraone/bitwig/: ElectraOneExtension.java  ElectraOneExtensionDefinition.java  ElectraOneMidiConfig.java  ElectraOneSysEx.java
faderfox-pc12/: README.md  debuggingplan.md  pom.xml
faderfox-pc12-multi/: README.md  pom.xml
faderfox-pc12-multi/src/main/java/com/faderfox/pc12multi/: FaderfoxPC12MultiExtension.java  FaderfoxPC12MultiExtensionDefinition.java
faderfox-pc12/src/main/java/com/faderfox/pc12/: FaderfoxPC12Extension.java  FaderfoxPC12ExtensionDefinition.java
note-fx-scale/: pom.xml
note-fx-scale-clap/: CMakeLists.txt
note-fx-scale-clap/src/: entry.c  plugin.c  plugin.h  scales.h  table.c  variations.h
note-fx-scale/src/main/java/com/notefx/scale/: ScaleLibrary.java  ScaleQuantizerDefinition.java  ScaleQuantizerExtension.java  VariationLibrary.java
